<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="protect.babysleepsounds.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:text="@string/description"
        android:textSize="16.0sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/sound_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:labelFor="@+id/budgetSpinner"
        android:text="@string/sound"
        android:textSize="16.0sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

<!--    <GridView-->
<!--        android:id="@+id/soundGridView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:numColumns="3"-->
<!--        android:columnWidth="100dp"-->
<!--        android:verticalSpacing="10dp"-->
<!--        android:horizontalSpacing="10dp"-->
<!--        android:stretchMode="columnWidth"-->
<!--        app:layout_constraintTop_toBottomOf="@id/sound_label"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/sound_label"/>-->


    <Spinner
        android:id="@+id/soundSpinner"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@id/sound_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sound_label"
        app:layout_constraintTop_toTopOf="@id/sound_label" />

    <TextView
        android:id="@+id/sleep_timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:labelFor="@+id/sleepTimerSpinner"
        android:text="@string/sleepTimer"
        android:textSize="16.0sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_label" />

    <Spinner
        android:id="@+id/sleepTimerSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="@id/sleep_timer_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sleep_timer_label"
        app:layout_constraintTop_toTopOf="@+id/sleep_timer_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dp"
        android:enabled="false"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleep_timer_label" />

</androidx.constraintlayout.widget.ConstraintLayout>
